--- a/ecommerce-client/tsconfig.json
+++ b/ecommerce-client/tsconfig.json
@@ -17,7 +17,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@sharedComponents/*" :["src/app/shared/components"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
