--- a/ecommerce-client/package.json
+++ b/ecommerce-client/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@ng-select/ng-select": "^4.0.0",
     "bootstrap": "^4.4.1",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
